--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bundle-android": "react-native bundle --platform android --dev false --entry-file index.android.js --bundle-output android/app/src/main/assets/index.android.bundle --sourcemap-output android/app/src/main/assets/index.android.map --assets-dest android/app/src/main/res/"
   },
   "dependencies": {
+    "native-base": "^0.5.11",
     "react": "15.3.2",
     "react-native": "0.34.1"
   }
